[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Naoki Hori"]
description = "Mandelbrot set visualiser"
repository = "https://github.com/NaokiHori/Mandelbrot"
edition = "2021"
publish = false
license-file = "LICENSE"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
js-sys = { version = "0.3.67" }
web-sys = { version = "0.3.67", features = ["CanvasRenderingContext2d", "Document", "HtmlCanvasElement", "Window", "ImageData", ] }
wasm-bindgen = { version = "0.2.90" }
